--- a/styles/style.css
+++ b/styles/style.css
@@ -41,17 +41,17 @@ body.stack {
 /* Home Page Main Title */
 .main-title {
   font-family: 'Oswald', sans-serif;
-  font-size: 7rem; /* font size */
-  color: #85b6c0; /* color text */
+  font-size: 8rem; /* font size */
+  color: #09f9f1; /* color text */
   margin: 2rem;
   text-align: left; /* Indented to the left */
   animation: colorChange 3s infinite;
 }
 
 @keyframes colorChange {
-  0% { color: #ff6f61; }
-  50% { color: #6f9dff; }
-  100% { color: #ff6f61; }
+  0% { color: #ff1500; }
+  50% { color: #0048ff; }
+  100% { color: #ff15d8; }
 }
 
 
@@ -103,12 +103,12 @@ body.stack {
   flex-direction: column;
   text-align: center;
   transition: transform 0.3s ease-out;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);  
+  box-shadow: 0 4px 8px rgba(12, 88, 193, 0.654);  
   }
 
 .circle:hover {
   transform: scale(1.1);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 8px 16px rgba(39, 194, 250, 0.787);
 }
 
 .circle h3 {
@@ -246,7 +246,7 @@ body.stack {
 
 /* Table Styling */
 table {
-  width: 100%;
+  width: 88%;
   border-collapse: collapse;
   margin: 1rem 0;
 }
@@ -270,7 +270,7 @@ table th {
 /* Visualization Section */
 .visualization canvas {
   border: 4px solid #00ffcc;
-  background: #e9ecef;
+  background: #e9ecef74;
   margin: 1rem auto;
   display: block;
   width: 500px;
