--- a/styles/style.css
+++ b/styles/style.css
@@ -9,14 +9,14 @@ body {
 
 /* Home Page Background */
 body.home {
-  background: #0d1a2d; /* Dark blue */
+  background: #0d1a2d; /* Dark */
   color: #e0e0eb;
 }
 
 /* Stack Page Background */
 body.stack {
-  background: #d0d0d0e0; /* Light gray */
-  color: #030058;
+  background: #0d1a2d; /* Light gray - d0d0d0e0*/
+  color: #d2d2d6;
 }
 
 /* Top Footer */
@@ -231,12 +231,11 @@ body.stack {
 
 /* General Box Styling for Sections */
 .box {
-  background: #f1efef;
-  /*Whitebackgroundforcontrast*/
+  background: #5f98f5;
   border-radius: 8px;
   padding: 1.5rem;
   margin: 1.5rem 0;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 4px 6px rgba(88, 214, 237, 0.689);
    /* Subtle shadow for depth */
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
