--- a/styles/style.css
+++ b/styles/style.css
@@ -20,15 +20,8 @@ body.home {
 }
 
 body.stack {
-  background: linear-gradient(135deg, #1e1f26, #283655);
+  background: #f8f8fa ;
   color: #d2d2d6;
-  background-image: repeating-linear-gradient(
-    45deg,
-    rgba(255, 255, 255, 0.05) 0,
-    rgba(255, 255, 255, 0.05) 2px,
-    transparent 2px,
-    transparent 4px
-  );
 }
 
 body.stack::before {
@@ -255,26 +248,18 @@ body.stack::before {
   margin-left: 1rem; /* Add spacing from the title */
 }
 
-/* General Box Styling for Sections 
+/* General Box Styling for Sections  */
 .box {
   background: #5f98f5;
   border-radius: 8px;
   padding: 1.5rem;
   margin: 1.5rem 0;
   box-shadow: 0px 4px 6px rgba(88, 214, 237, 0.689);
-   /* Subtle shadow for depth 
+   /* Subtle shadow for depth  */
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
-}
-*/
-.box {
-  background: #0d1a2d;
-  border: 2px solid transparent;
-  border-image: linear-gradient(90deg, #3498db, #6a0dad, #ff008e);
-  border-image-slice: 1;
-  animation: borderAnimation 3s linear infinite;
 }
 
 @keyframes borderAnimation {
@@ -297,7 +282,7 @@ body.stack::before {
 
 /* Table Styling */
 table {
-  width: 70%;
+  width: 50%;
   border-collapse: collapse;
   margin: 1rem 0;
 }
