--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
+  line-height: 1.6;
   min-height: 100vh;
 }
 
@@ -22,6 +23,12 @@ body.home {
 body.stack {
   background: #f8f8fa ;
   color: #d2d2d6;
+}
+
+.ds-header .title {
+  font-size: 4rem;
+  align-items: center;
+  color: #031572;
 }
 
 body.stack::before {
@@ -237,10 +244,7 @@ body.stack::before {
   gap: 1rem;
 }
 
-.stack-header .title {
-  font-size: 3rem;
-  color: #0e163c;
-}
+
 
 .stack-image {
   width: 250px;
@@ -250,7 +254,7 @@ body.stack::before {
 
 /* General Box Styling for Sections  */
 .box {
-  background: #d5dfef;
+  background: #d5d8dd;
   border-radius: 8px;
   padding: 1.5rem;
   margin: 1.5rem 0;
@@ -282,7 +286,7 @@ body.stack::before {
 
 /* Table Styling */
 table {
-  width: 50%;
+  width: 40%;
   border-collapse: collapse;
   margin: 1rem 0;
 }
