--- a/styles/style.css
+++ b/styles/style.css
@@ -31,6 +31,28 @@ body.home {
   -webkit-animation: colorChange 3s infinite;
 }
 
+.sub-title {
+  font-size: 1.5rem;
+  color: #34495e;
+  text-align: center;
+  margin-top: 10px;
+}
+
+#dynamic-text {
+  font-weight: bold;
+  color: #2c3e50;
+  border-right: 2px solid #2c3e50; /* Blinking cursor */
+  animation: blink 0.7s step-end infinite;
+}
+
+@keyframes blink {
+  50% {
+    border-color: transparent;
+  }
+}
+
+
+
 body.stack {
   background: #f8f8fa ;
   color: #d2d2d6;
