--- a/styles/style.css
+++ b/styles/style.css
@@ -32,16 +32,17 @@ body.home {
 }
 
 .sub-title {
-  font-size: 1.5rem;
-  color: #34495e;
-  text-align: center;
-  margin-top: 10px;
+  font-size: 2rem;
+  color: #76cfe6ff;
+  text-align: left;
+  margin-top: 1.5rem; /* Space between the main title and this subtitle */
+  margin-left: 20px; /* Move a bit to the left */
 }
 
 #dynamic-text {
   font-weight: bold;
-  color: #2c3e50;
-  border-right: 2px solid #2c3e50; /* Blinking cursor */
+  color: #f1c40f;
+  border-right: 2px solid #f1c40f; /* Blinking cursor */
   animation: blink 0.7s step-end infinite;
 }
 
